--- a/app/src/main/res/layout/activity_feature3_setting.xml
+++ b/app/src/main/res/layout/activity_feature3_setting.xml
@@ -5,6 +5,75 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    tools:context=".Feature3Setting">
+    tools:context=".Feature2Setting">
+
+    <Switch
+        android:id="@+id/feature3Switch"
+        android:layout_width="372dp"
+        android:layout_height="93dp"
+        android:shadowColor="#E91E63"
+        android:text="@string/sleep_mode_feature"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/colorWhite"
+        android:textColorHighlight="#E91E63"
+        android:textColorHint="@color/colorWhite"
+        android:textIsSelectable="false"
+        android:textOff="@string/switchOFF"
+        android:textOn="@string/switchON"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
+
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/angle_sensitive"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/colorWhite"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feature3Switch"
+        app:layout_constraintVertical_bias="0.17000002" />
+
+    <EditText
+        android:id="@+id/angleEdittxt"
+        android:layout_width="106dp"
+        android:layout_height="55dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="10"
+        android:inputType="number"
+        android:text="10"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.19" />
+
+    <Button
+        android:id="@+id/AngleBtn"
+        android:layout_width="165dp"
+        android:layout_height="62dp"
+        android:background="@drawable/custom_button"
+        android:text="@string/set_angle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/angleEdittxt"
+        app:layout_constraintVertical_bias="0.13" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
