--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="150dp"
         android:background="@drawable/custom_button"
-        android:text="Setting"
+        android:text="@string/setting"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
